--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
         "mkdirp":"0.3.5",
         "cheerio":"0.15.0",
         "uglify-js":"2.4.13",
-        "request-json":"0.5.0"
+        "request-json":"0.5.0",
+        "socket.io":"1.2.1"
     },
     "devDependencies": {
         "grunt": "0.4.4",
